# Recruitment-Portal-MIC

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
recruitmentportal/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
recruitmentportal/static/: styles.css
recruitmentportal/templates/: base.html
services/: admin.py  aiding_functions.py  choices.py  filters.py  forms.py  mixins.py  models.py  resources.py  tasks.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_application_deparment_preferences_and_more.py  0002_alter_application_department_preferences_and_more.py  0002_alter_profile_role.py  0002_rename_deparment_preferences_application_department_preferences.py  0003_alter_application_date_of_application.py  0003_alter_application_status.py  0003_rename_end_data_time_recruitmentdrive_end_date_time.py  0004_alter_application_question_one_and_more.py  0004_recruitmentdrive_department.py  0005_alter_application_department_preferences_and_more.py  0006_alter_application_department_preferences_and_more.py  0007_alter_application_department_preferences_and_more.py  0008_alter_application_status.py  0009_application_accepted_department.py
services/templates/account/: profile.html
services/templates/services/: UpdateApplication.html  UpdateRecruitmentDrive.html  home.html  landing_page.html  mass_mail.html  preview_application.html  recruitment_application.html  view_all_applications.html
services/templatetags/: custom_tags.py
